@@ -320,7 +320,9 @@ int get_values(void)
 	/* Do not stop when select is made by poller for unreachable hosts */
 	while((row=DBfetch(result))&&(stop==0 || poller_type == ZBX_POLLER_TYPE_UNREACHABLE))
 	{
-		result2 = NULL;
+		/* This code is just to avoid compilation warining about use of uninitialized result2 */
+		result2 = result;
+		/* */
 
 		/* Poller for unreachable hosts */
 		if(poller_type == ZBX_POLLER_TYPE_UNREACHABLE)
